Replace new Long by valueof